client/src/components/Page/Page.module.css
.overarching {

  display: grid;
  width: 100%;
  grid-auto-columns: 1fr;
  grid-auto-rows: 1fr;
}

.Page {

  background-color: transparent;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column-end: 2;
  grid-row-end: 2;
  max-width: 100vw;
}

.headline {
  background-color: var(--primary-color);
  width: 100%;
  align-self: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-bottom: 40px;
}

.primary-color-background {
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column-end: 2;
  grid-row-end: 2;
  background-color: var(--primary-color);
  width: 100%;
  height: 1000px;
  z-index: -5;
}

.content-pane-side-bar {

  display: flex;
  align-self: center;
  width: 80%;
}

.content-pane {
  background-color: white;
  width: 100%;
  /* justify-content: center; */
  align-self: center;
  padding-top: 36px;
  padding-bottom: 36px;
  display: flex;
}

.main-pane {
  padding-left: 36px;
  padding-right: 18px;
  justify-content: center;

  display: flex;
  flex-direction: column;
  width: 80%;
  min-height: 800px;
}


.main-pane-item li {
  padding-top: 18px;
  font-size: 1.5rem;
  font-family: "Montserrat", sans-serif;
  max-width: 90vw;
}


.horizontal > label{
  font-size: 1.2rem;
  color: var(--secondary-color);
  font-family: 'Montserrat', sans-serif;
  padding-left: 20px;
  padding-bottom: 15px;
  align-self: center;
  font-weight: bold;
}

.DatePicker{
  padding: 8px 10px;
  border-radius: 2px;
  margin-left: 10px;
  outline: none;
  border: none;
  font-size: 1rem;
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 16px;
  border: 1px solid black;
  background-color: rgb(250,250,250);
  width: fit-content;
}

.main-pane-item blockquote {
  padding-top: 18px;
  font-size: 1.5rem;
  font-family: "Montserrat", sans-serif;
  max-width: 90vw;
}

.main-pane-item {
  padding-top: 36px;
  padding-bottom: 36px;
  justify-content: flex-start;
  display: flex;
  width: 100%;
  align-items: center;
}

.main-pane-item-centered{
  justify-content: center;
}

.main-pane-list-item {
  padding-top: 18px;
  display: flex;
  justify-content: center;
}



.main-pane-list-item p {
  font-size: 1.5rem;
  font-family: "Montserrat", sans-serif;
  max-width: 90vw;
}

.m {
  border-top-style: solid;
  border-top-color: var(--primary-color);
}

.side-pane {
  padding-right: 36px;
  padding-left: 18px;
  align-self: flex-start;
  width: 80%;
}

.heading {
  color: var(--primary-color);
  font-family: "Montserrat", sans-serif;
}

.sub-heading {
  font-size: "1rem";
  color: var(--primary-color);
  font-family: "Montserrat", sans-serif;
}

.heading-special{
  font-size: 3rem;
  color: var(--secondary-color);
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
  letter-spacing: 2px;
}

.main-pane p {
  font-size: 1.5rem;
  font-family: "Montserrat", sans-serif;
  max-width: 90vw;
}

.image-container img {
  max-width: 100%;
  width: fit-content;
  align-self: center;
}

.image-container {
  display: flex;
  flex-direction: column;
}

.image-container > figcaption {
  padding-top: 18px;
  padding: 18px 0px;
  font-size: 1.25rem;
  font-family: "Montserrat", sans-serif;
  max-width: 90vw;
}

.headline-form{
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 10px;
}

.headline-form-input{
  width: 600px;
  padding: 8px 10px;
  border-radius: 2px;
  margin-left: 10px;
  outline: none;
  border: none;
  font-size: 1rem;
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 16px;
  border: 1px solid black;
  width: 100%;
  background-color: rgb(250,250,250);
}

.headline-form-checkbox{
  padding: 8px 10px;
  border-radius: 2px;
  outline: none;
  border: none;
  margin-bottom: 16px;
  border: 1px solid black;
  width: 25px;
  height: 25px;
  background-color: rgb(250,250,250);
}



.horizontal{
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: flex-end;
}

.horizontal-same-line{
  display: flex;
}

  .submit-button {
    border: none;
    background:  var(--secondary-color);
    color: white;
    font-weight: 700;
    padding: 18px;
    letter-spacing: 1px;
    border-radius: 6px;
    display: inline-block;
    transition: all 0.3s ease 0s;
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    width: fit-content;
    align-self: center;
}

.submit-button:hover {
  color: white;
  font-weight: bold;
  letter-spacing: 3px;
  -webkit-box-shadow: 0px 5px 40px -10px rgba(240,240,240,0.57);
  -moz-box-shadow: 0px 5px 40px -10px rgba(240,240,240,0.57);
  transition: all 0.3s ease 0s;
}

.register-login-form{
  
  width: 100%;
  max-width: 500px;
  /* padding: 20px; */
  border-style: solid solid solid solid;
  border-color: var(--secondary-color);

}


.register-login-form-padded{
  padding-left: 0px;
  padding-right: 35px;
  padding-bottom: 20px;
}

.register-login-form > h2{
  margin-top: 0px;
  padding: 10px;
  padding-left: 25px;
  font-family: 'Montserrat', sans-serif;
  background-color: var(--primary-color);
  color: white;
  border-style: none none solid none;
  border-color: var(--secondary-color);
  color: var(--font-color);
  font-size: 1.5rem;

  font-weight: bold;
  letter-spacing: 3px;
}

.register-login-form-text{
  display: flex;
  flex-direction: column;
  padding-left: 20px;
}

.register-login-form-text> label{
  padding: 5px;
}

.register-login-form-text:hover{
  cursor: pointer;;
}


.contact-us-form{
  
  width: 100%;
  /* padding: 20px; */
  border-style: solid solid solid solid;
  border-color: var(--secondary-color);

}


.contact-us-form-padded{
  padding-left: 0px;
  padding-right: 35px;
  padding-bottom: 20px;
}

.contact-us-form > h2{
  margin-top: 0px;
  padding: 10px;
  padding-left: 25px;
  font-family: 'Montserrat', sans-serif;
  background-color: var(--primary-color);
  color: white;
  border-style: none none solid none;
  border-color: var(--secondary-color);
  color: var(--font-color);
  font-size: 1.5rem;

  font-weight: bold;
  letter-spacing: 3px;
}


/* 
  .App-header {
    background-image: url("headerbackgroundcropped.jpg");
    background-size: cover;
    background-position-y: bottom;
    width: 100%;
    height: 40vh;
    display: flex;
    align-items: center;
    justify-content: flex-start;
  }
  
  #header-title{
    color: white;  
    font-family: 'Montserrat', sans-serif;
    font-size: 9vmax;
    padding-left: 2vw;
    text-shadow: 6px 6px var(--primary-color);
    letter-spacing: 3px;
    cursor: pointer;
  } */

@media screen and (max-width: 1350px) {
  /* .App-header{
      background-image: url("headerbackgroundcroppedsmallscreen.jpg");
      height: 12vh;
      transition: all 200ms linear;
    }
  
    #header-title{
      font-size: 8vmax;
    } */ /*  */

  .main-pane {
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  .side-pane {
    width: 0;
    display: none;
  }

  .content-pane {
    width: 100%;
    /* align-items: center; */
  }

  .content-pane-side-bar {
    display: flex;
    align-self: center;
    width: 100%;
  }

  .image-container {
    max-width: 100vw;
  }

  .image-container > img {
    max-width: 80vw;
  }
  .image-container > figcaption {
    max-width: 80vw;
  }

  .main-pane label,
  .main-pane h2,
  .main-pane p,
  .main-pane-item li,
  .main-pane-item blockquote {
    padding-right: 7vw;
  }
  .even {
    flex-direction: column-reverse;
  }

  .odd {
    flex-direction: column;
  }


  .horizontal-same-line{
      
    display: flex;
    flex-direction: column;
  }

  .horizontal{
    justify-content: flex-start;
  }

  .headline-form-input, .DatePicker{
    margin-right: 7vw;
  }


}

/* .side-panel-inital{
    top: 500px;
  } */

@media screen and (max-width: 550px) {
  .main-pane > p {
    padding-left: 0px;
  }

  .register-login-form{
    padding-right: 0px;
  }

  .main-pane {
    padding-left: 0px;
    padding-right: 0px;
    justify-content: flex-start;
    align-items: center;
  }
  .main-pane label,
  .main-pane h2,
  .main-pane p {
    padding-left: 0px;
    padding-right: 0px;
  }
  .register-login-form > h2{
    padding-left: 15px;
  }
  .main-pane-item{
    justify-content: center;
  }
}

